[package]
name = "jetkvm_control"
description = "A control client for JetKVM over WebRTC."
license = "MIT"
repository = "https://github.com/davehorner/jetkvm_control"
homepage = "https://github.com/davehorner/jetkvm_control"
version = "0.2.0"
edition = "2021"
authors = ["David Horner"]


[features]
default = ["lua","tls"]
lua = ["mlua"]
tls = [
    "tokio-rustls",
    "rustls",
    "rustls-pemfile",
    "rcgen",
    "hmac",
    "sha2",
    "hex",
]

[workspace]
members = ["jetkvm_control_svr"]

[dependencies]
dialoguer = "0.11.0"
anyhow = "1.0.95"
base64 = "0.22.1"
clap = { version = "4.5.31", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["blocking", "cookies", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = "1.43.0"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
webrtc = "0.12.0"
mlua = { version = "0.10.1", features = ["lua54", "vendored", "async", "send", "serialize"], optional = true }
windows = { version = "0.60.0", features = ["Win32", "Win32_System", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Kernel", "Win32_System_Memory", "Win32_System_ProcessStatus", "Win32_System_SystemInformation", "Win32_System_SystemServices", "Win32_System_Threading", "Win32_System_WindowsProgramming", "Win32_UI", "Win32_UI_WindowsAndMessaging"] }
lazy_static = "1.5.0"


rand = { version = "0.9.0", optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }
hex = { version = "0.4.3", optional = true }
tokio-rustls = { version = "0.26.2", optional = true }
hmac = { version = "0.12.1", optional = true }
rustls = { version = "0.23.23", optional = true }
rcgen = { version = "0.13.2", optional = true }
sha2 = { version = "0.10.8", optional = true }
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
regex = "1.11.1"
