[package]
name = "jetkvm_control_svr"
description = "A secure RPC server for retrieving and managing system information with TLS encryption and HMAC authentication."
license = "MIT"
repository = "https://github.com/davehorner/jetkvm_control"
homepage = "https://github.com/davehorner/jetkvm_control"
edition = "2021"
authors = ["David Horner"]

[features]
default = ["tls"]
lua = ["mlua"]

# TLS-related dependencies
tls = [
    "rustls-pemfile",
    "tokio-rustls",
    "hmac",
    "rustls",
    "rcgen",
    "sha2",
    "rand",
    "hex"
]
windows_util = ["windows"]

[[bin]]
name = "jetkvm_control_svr"
path = "jetkvm_control_svr.rs"

[[example]]
name = "jetkvm_control_svr_client"
path = "../src/jetkvm_control_svr_client.rs"

[dependencies]
# Internal Dependencies
jetkvm_control = { path = "../", features=["tls"] }
jetkvm_control_platform = { path = "../jetkvm_control_platform" }

anyhow = "1.0.95"
base64 = "0.22.1"
clap = { version = "4.5.31", features = ["derive"] }
config = "0.15.8"
dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = "1.43.0"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
mlua = { version = "0.10.1", features = ["lua54", "vendored", "async", "send", "serialize"], optional = true }


# TLS-related dependencies (optional under `tls` feature)
rustls-pemfile = { version = "2.2.0", optional = true }
tokio-rustls = { version = "0.26.2", optional = true }
hmac = { version = "0.12.1", optional = true }
rustls = { version = "0.23.23", optional = true }
rcgen = { version = "0.13.2", optional = true }
sha2 = { version = "0.10.8", optional = true }
rand = { version = "0.9.0", optional = true }
hex = {version = "0.4.3", optional = true }

# Automatically enable windows_util on Windows
[target.'cfg(windows)'.dependencies]
windows = { version = "0.60.0", features = ["Win32", "Win32_System", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Kernel", "Win32_System_Memory", "Win32_System_ProcessStatus", "Win32_System_SystemInformation", "Win32_System_SystemServices", "Win32_System_Threading", "Win32_System_WindowsProgramming", "Win32_UI", "Win32_UI_WindowsAndMessaging"], optional = true }
